--- a/CS68 - MVC First.csproj
+++ b/CS68 - MVC First.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>CS68___MVC_First</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.4" />
+  </ItemGroup>
+
 </Project>
