--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Query":"Information",
+      "Microsoft.EntityFrameworkCore.Database.Command":"Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppMvcConnectitonString": "Data Source=IT-79; Initial Catalog=AppMvc; User ID=sa; Password=Vf@2022;"
+  }
 }
